4B/cs444/tests/site/pass/pass_protectedfields.joos
/* pass: protected fields */
public class A {
  public A() {}
  protected int x;
}

