4B/cs444/tests/site/fail/fail_float.joos
/* fail: float */
public class A {
  protected float x;
}

